[package]
name = "gemlab"
version = "2.0.0"
edition = "2021"
license = "MIT"
description = "Geometry and meshes laboratory for finite element analyses"
homepage = "https://github.com/cpmech/gemlab"
repository = "https://github.com/cpmech/gemlab"
documentation = "https://docs.rs/gemlab"
readme = "README.md"
categories = ["mathematics", "science"]
keywords = ["geometry", "mesh", "fem"]

[dependencies]
plotpy = "1.14"
russell_lab = "1.10"
russell_sparse = "1.10"
russell_stat = "1.10"
russell_tensor = "1.10"
tritet = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"

[dev-dependencies]
criterion = "0.7"
