[package]
name = "gemlab"
version = "2.0.0"
edition = "2021"
license = "MIT"
description = "Geometry and meshes laboratory for finite element analyses"
homepage = "https://github.com/cpmech/gemlab"
repository = "https://github.com/cpmech/gemlab"
documentation = "https://docs.rs/gemlab"
readme = "README.md"
categories = ["mathematics", "science"]
keywords = ["geometry", "mesh", "fem"]

[dependencies]
plotpy = "1.19"
russell_lab = { path = "../russell/russell_lab", features = ["intel_mkl"] }
russell_sparse = { path = "../russell/russell_sparse", features = [
  "local_suitesparse",
  "with_mumps",
  "intel_mkl",
] }
russell_stat = { path = "../russell/russell_stat", features = ["intel_mkl"] }
russell_tensor = { path = "../russell/russell_tensor", features = [
  "intel_mkl",
] }
tritet = { path = "../tritet", features = ["with_tetgen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"

[dev-dependencies]
criterion = "0.8"
