[package]
name = "gemlab"
version = "2.1.0"
edition = "2021"
license = "MIT"
description = "Geometry and meshes laboratory for finite element analyses"
homepage = "https://github.com/cpmech/gemlab"
repository = "https://github.com/cpmech/gemlab"
documentation = "https://docs.rs/gemlab"
readme = "README.md"
categories = ["mathematics", "science"]
keywords = ["geometry", "mesh", "fem"]

[features]
intel_mkl = [
    "russell_lab/intel_mkl",
    "russell_sparse/intel_mkl",
    "russell_stat/intel_mkl",
    "russell_tensor/intel_mkl",
]
local_sparse = ["russell_sparse/local_sparse"]

[dependencies]
plotpy = "1.23"
russell_lab = "2.1"
russell_sparse = "2.1"
russell_stat = "2.1"
russell_tensor = "2.1"
tritet = { version = "3.2", features = ["with_tetgen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"

[dev-dependencies]
criterion = "0.8"
